--- a/forum/templates/forum/add_post.html
+++ b/forum/templates/forum/add_post.html
@@ -25,6 +25,11 @@
                 <label for="author">Author:</label>
                 <input type="text" name="author" id="author" required>
             </div>
+
+            <div class="form-group">
+                <label for="tags">Tags (comma-separated):</label>
+                <input type="text" id="tags" name="tags" placeholder="e.g., Assignment 1, Exam, Project, Quiz">
+            </div>
             
             <button type="submit">Create Post</button>
         </form>
