--- a/forum/templates/forum/detail.html
+++ b/forum/templates/forum/detail.html
@@ -20,6 +20,16 @@
                         <button type="submit" class="delete-button">Delete Post</button>
                     </form>
                 </div>
+
+                <div class="post-tags">
+                    {% if post.tags.all %}
+                        <strong>Tags:</strong>
+                        {% for tag in post.tags.all %}
+                            <a href="{% url 'index' %}?tag={{ tag.name }}" class="tag-badge">{{ tag.name }}</a>
+                        {% endfor %}
+                    {% endif %}
+                </div>
+                
             </div>
             <div class="post-content">
                 {{ post.content }}
@@ -152,7 +162,16 @@
             border: none;
             cursor: pointer;
             padding: 8px 15px;
-            }
+        }
+        
+        .tag-badge {
+            background-color: #f0f0f0;
+            padding: 3px 8px;
+            margin-right: 5px;
+            border-radius: 3px;
+            text-decoration: none;
+            color: #333;
+        }
         </style>
 </body>
 </html>
