--- a/forum/templates/forum/add_post.html
+++ b/forum/templates/forum/add_post.html
@@ -8,6 +8,16 @@
 <body>
     <main>
         <h1>Create New Post</h1>
+
+        {% if messages %}
+        <div class="messages">
+            {% for message in messages %}
+        <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">
+            {{ message }}
+        </div>
+            {% endfor %}
+        </div>
+        {% endif %}
         
         <form method="post" action="{% url 'add_post' %}">
             {% csrf_token %}
@@ -23,12 +33,13 @@
 
             <div class="form-group">
                 <label for="author">Author:</label>
-                <input type="text" name="author" id="author" required>
+                <input type="text" name="author"  pattern="^[a-zA-Z0-9\s,]+" id="author" required>
             </div>
 
             <div class="form-group">
-                <label for="tags">Tags (comma-separated):</label>
-                <input type="text" id="tags" name="tags" placeholder="e.g., Assignment 1, Exam, Project, Quiz">
+                <label for="tags">Tags:</label>
+                <input type="text" id="tags" name="tags" pattern="^[a-zA-Z0-9\s,]+" placeholder="Only alphanumeric characters accepted">
+                <p class="tag-help">Separate multiple tags with commas.</p>
             </div>
             
             <button type="submit">Create Post</button>
