--- a/forum/templates/forum/add_post.html
+++ b/forum/templates/forum/add_post.html
@@ -33,7 +33,7 @@
 
             <div class="form-group">
                 <label for="author">Author:</label>
-                <input type="text" name="author"  pattern="^[a-zA-Z0-9\s,.]+" id="author" required>
+                <input type="text" name="author"  pattern="^[a-zA-Z\s]+" id="author" required>
             </div>
 
             <div class="form-group">
