--- a/forum/templates/forum/detail.html
+++ b/forum/templates/forum/detail.html
@@ -72,7 +72,7 @@
                 {% csrf_token %}
                 <div class="form-group">
                     <label for="author">Your Name:</label>
-                    <input type="text" id="author" name="author" pattern="^[a-zA-Z0-9\s,.]+"required>
+                    <input type="text" id="author" name="author" pattern="^[a-zA-Z]+"required>
                 </div>
                 <div class="form-group">
                     <label for="content">Your Comment:</label>
